--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             My master's thesis focused on optimizing fine-grain entity type classification using contrastive learning.
                             <br>
                             Previously, I earned an M.A. in Chinese Linguistics under the guidance of 
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">Prof. Daming Xu</a>
+                            <a href="https://damingxu3.academia.edu/" target="_blank">Prof. Daming Xu</a>
                             at the 
                             <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">Faculty of Arts and Humanities</a>
                             of the University of Macau in Macau China, 
