--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -30,13 +30,13 @@
                 <h1 class="site-title" style="color: #65587d;"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
-                        <a class="card-title" href="knowledgebase/computational_linguistics.html">
+                        <a class="card-title" href="knowledgebase/nlp.html">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/Computational_Linguistics.png">
                             </div>
                             <div class="card-cover-title">
-                                <h4> Computational Linguistics </h4>
-                                <h5> AI, NLP, ML, DL </h5>
+                                <h4> Natural Language Processing</h4>
+                                <h5> AI | Machine Learning | Linguistics </h5>
                             </div>
                         </a>
                     </div> 
@@ -47,7 +47,7 @@
                             </div>
                             <div class="card-cover-title">
                                 <h4> Human Language </h4>
-                                <h5> Cantonese, Mandarin </h5>
+                                <h5> Cantonese | Mandarin </h5>
                             </div>
                         </a>
                     </div> 
@@ -58,7 +58,7 @@
                             </div>
                             <div class="card-cover-title">
                                 <h4> Knowledge Graph </h4>
-                                <h5> RDF, SHACL, OWL </h5>
+                                <h5> RDF | SHACL | OWL | Tools | KD </h5>
                             </div>
                         </a>
                     </div> 
