--- a/zho/index_cmn.html
+++ b/zho/index_cmn.html
@@ -53,7 +53,7 @@
                             在此之前，我在位于中国澳门特别行政区的澳门大学
                             <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">艺术与人文学院</a>
                             研读中国语言学，并取得文学硕士学位。期间由
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">徐大明教授</a>
+                            <a href="https://damingxu3.academia.edu/" target="_blank">徐大明教授</a>
                             指导完成社会语言学论文，探讨说话人的说话方式与其社会背景的关系。
                             <br><br>
                             而这一切开始于中国广东的
