--- a/zho/index_yue.html
+++ b/zho/index_yue.html
@@ -53,7 +53,7 @@
                             喺再之前，我喺位於中國澳門特別行政區嘅澳門大學
                             <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/" target="_blank">藝術與人文學院</a>
                             研讀中國語言學，並取得文學碩士學位。期間由
-                            <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650" target="_blank">徐大明教授</a>
+                            <a href="https://damingxu3.academia.edu/" target="_blank">徐大明教授</a>
                             指導完成社會語言學論文，探討人嘅講話方式同佢嘅社會背景嘅關係。
                             <br><br>
                             而伊始之地，係中國廣東嘅
