--- a/knowledgebase/nlp.html
+++ b/knowledgebase/nlp.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <title>Zhiyin's Childhood</title>
         <meta name="author" content="Zhiyin Tan">
-        <meta name="description" content="Fishing with dad was the best time of my childhood to enjoy nature.">
+        <meta name="description" content="NLP 101">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
         <meta property="og:description" content="Zhiyin Tan's fairyland">
-        <meta property="og:title" content="Zhiyin's Fairyland" />
+        <meta property="og:title" content="Zhiyin Tan" />
         <meta property="og:type" content="website" />    
 
         <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
@@ -99,11 +99,11 @@
 
             .menubox{
                 width: 100%;
-                box-shadow: 0px 4px 8px rgb(159 155 187 / 10%);
+                box-shadow: 0px 0px 4px rgb(159 155 187 / 10%);
                 border-radius: 1vh;
                 background-color: transparent;
                 flex: 1.3;
-                transition: all 0.5s ease-out 0.05s;
+                transition: all 0.25s ease-out 0.05s;
                 margin-bottom: 0vh;
                 padding: 1.5vh 2vh;
             }
@@ -196,13 +196,13 @@
             .menubox:hover,
             #backButton:hover {
                 cursor: pointer;
-                background-color: rgb(244, 241, 249);
+                background-color: rgb(239, 234, 245);
                 border-radius: 1vh;
                 border: none;
                 border-color: rgba(255, 255, 255, 0);
-                box-shadow: 0px 5px 15px rgb(159 155 187 / 50%);
-                color: rgb(125, 115, 158);
-                transform: scaleX(1.005);
+                box-shadow: 0px 4px 8px rgb(159 155 187 / 30%);
+                color: rgb(82, 73, 111);
+                transform: scaleX(1.004);
             }
 
             #backButton:focus {
@@ -210,7 +210,7 @@
             }
 
             .menubox.active {
-                background-color: rgb(243, 241, 249);
+                background-color: rgb(239, 234, 245);
             }
 
             .bolded { 
@@ -417,7 +417,7 @@
         <div class="contain">
             <main class="site-cl-main">
                 <div id="start" class="site-cl-content">
-                    <h1 class="site-title"> Computational Linguistics </h1>
+                    <h1 class="site-title"> Natural Language Processing (NLP) </h1>
     
                     <div class="site-main"> 
                     
