--- a/about_me/cv_english.html
+++ b/about_me/cv_english.html
@@ -88,7 +88,7 @@
         <h2>Publications and Projects</h2>
         <div>
           <h3>Applied Contrastive Learning to Fine-grained Entity Type Classification</h3>
-          <p>A dataset of 32,062 entity descriptions labeled with 228 fine-grained types and 27 coarse-grained types 
+          <p>A dataset of 32,062 entity descriptions labelled with 228 fine-grained types and 27 coarse-grained types 
             was developed to examine the effectiveness of gain of contrastive learning in classifying entity types 
             across different models with a maximum gain of 17% in accuracy for fine-grained typing, Master thesis, 2023</p>
         </div>
@@ -124,7 +124,7 @@
         <h3>AITalents Competition</h3>
         <p>TechQuartier, Europe, 2020 - 2021<br />
             Group collaborated to build a platform for real-time analysis of ESG signals in the supply chain to help buyers choose suppliers. 
-            In charged of crawling news and performing sentiment polarity analysis, building graphs using Cypher connected to Neo4j, and 
+            In charge of crawling news and performing sentiment polarity analysis, building graphs using Cypher connected to Neo4j, and 
             creating animated videos of pitching.</p>
       </div>
       <div>
