--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             the complexities and nuances of linguistics and language processing.  
                         </p>
                         <p>
-                            My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, 
+                            My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tɐːn/ /dʒɘ/ /jɪːn/ in Mandarin, 
                             /tam/ /dziː/ /jɐn/ in Cantonese.
                         </p>
                         <p>
