--- a/zho/tool/footer_zho.html
+++ b/zho/tool/footer_zho.html
@@ -10,12 +10,14 @@
                 <p class="text-email"> 邮件 </p> 
                 </a>
             </li>
+            <!--
             <li class="contact-twitter">
                 <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                <img class="contact-icon" src="../../pic/twitter_round.ico" alt="twitter link">
-                <p class="text-twitter"> 推特 </p>
+                <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
+                <p class="text-twitter"> Twitter </p>
                 </a>
             </li>
+            -->
             <li class="contact-linkedin">
                 <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
                 <img class="contact-icon" src="../../pic/linkedin.ico" alt="linkedin link">
