--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             /tam/ /dziː/ /jɐn/ in Cantonese.
                         </p>
                         <p>
-                            <a href="https://my.visualcv.com/zhiyin_tan_cv/" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
+                            <a href="./cv/cv_english.html" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
                         </p>
                         <p>
                             <a href="./index.html" style="text-decoration: underline;">English</a>
