update some section of knowledge graph

--- a/cv/cv_english.html
+++ b/cv/cv_english.html
@@ -150,7 +150,7 @@
               </a>
           </div>
           <div class="plain_text" id="website">
-              <img src="../pic/github_icon.ico" alt="website" style="filter: brightness(0);">
+              <img src="../pic/github_icon.ico" alt="website">
               <a href="https://zhiyintan.github.io/">
                 <p>zhiyintan.github.io</p>
               </a>
