--- a/index.html
+++ b/index.html
@@ -26,23 +26,22 @@
 
                 <div id="start" class="site-home-content">
                     <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
-                                 padding: 2vw 10em 0 0; margin: 0;">
+                                 padding: 2vw 0 0 0; margin: 0;">
                         <li style="display: grid; justify-items: center; align-items: center;">
                             <img class="avatar" title="avatar" src="./pic/avatar_green_round_small.png" 
                             style="min-width: 5em; max-width: 8em;">
                         </li>
-                        <li style="min-width: 250px;">
-                            <div class="namecard">    
-                                <p>M.Sc. M.A.</p>        
+                        <li style="min-width: 250px; display: grid; grid-template-rows:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;">
+                            <div class="namecard">          
                                 <h1 class="site-title"> Tan, Zhiyin </h1>
-                                <p>Computational Linguist</p>
-                                <p>[first name]121[at]gmail.com</p>
-                            </div>
+                                <p style="padding: 0 0 8px 3px;">NLP Researcher</p>
+                                <a href="./cv/cv_english.html" style="text-decoration: underline; font-size: 1.4rem;" target="_blank">CV.pdf</a>
+                            </div>   
                         </li>
                     </ul>
 
                     <div class="intro" style="
-                    text-align: left; line-height: 1.5em; max-width: 50em;">  
+                    text-align: left; line-height: 1.5em; max-width: 50em; margin: 40px 0;">  
                         <p> 
                             With an academic background spanning the fields of Natural Language Processing and Linguistics, 
                             my journey in academia has been both enriching and diverse. 
@@ -72,9 +71,7 @@
                             My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tɐːn/ /dʒɘ/ /jɪːn/ in Mandarin, 
                             /tam/ /dziː/ /jɐn/ in Cantonese.
                         </p>
-                        <p>
-                            <a href="./cv/cv_english.html" style="text-decoration: underline;" target="_blank">CV (PDF)</a>
-                        </p>
+                        <br><br>
                         <p>
                             <a href="./index.html" style="text-decoration: underline;">English</a>
                             /
@@ -90,7 +87,7 @@
                 <div style="display:block; z-index: 1000; position: fixed;
                     right: 5vw;bottom: 20%; opacity: 0.8; margin: 0;">
                     <a href="#start">
-                        <img class="to-top" src="./pic/top-arrow_square.ico">
+                        <img class="to-top" src="./pic/top-arrow_square.ico"  alt="to-top">
                     </a>
                 </div>      
             </main>
