--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
                 <div style="display:block; z-index: 1000; position: fixed;
                     right: 5vw;bottom: 20%; opacity: 0.8; margin: 0;">
                     <a href="#start">
-                        <img class="to-top" src="./pic/top-arrow_square.ico">
+                        <img class="to-top" src="./pic/top-arrow_square.ico"  alt="to-top">
                     </a>
                 </div>
             </main>
