--- a/cv/cv_english.html
+++ b/cv/cv_english.html
@@ -31,8 +31,8 @@
 
           <div class="one_entry">
             <h5>R&D NLU Computational Linguist</h5>
-            <h5 class="organization">Cerence Inc., Aachen, Germany 10/2020 - 09/2022</h5>
-            <p>Advanced dialogue systems through expert natural language understanding, optimizing unstructured data processing.</p>
+            <h5 class="organization">Cerence, Remote 10/2020 - 09/2022</h5>
+            <p>Advanced Chinese dialogue systems through expert natural language understanding with Shanghai NLU team, optimizing unstructured data processing.</p>
             <ul>
               <li>Boosted intent accuracy by 10% with strategic linguistic & architectural enhancements.</li>
               <li>Designed a sophisticated annotation tool using WPF, streamlining data labeling through user-friendly click-to-link functionalities and rapid-access use-case tags.</li>
