--- a/knowledgebase/knowledge_graph.html
+++ b/knowledgebase/knowledge_graph.html
@@ -40,20 +40,22 @@
                             <div class="kg_sub_menu">
                                 <h5 data-section="kb_concepts">Concepts</h5>
                                 <h5 data-section="kb_database">Database</h5>
+                                <h5 data-section="kb_querying">Query</h5>
                             </div>
 
-                            <div class="kg_menu"><span>▸</span><h4>Knowledge Representation</h4></div>
+                            <div class="kg_menu" data-file="representation.html"><span>▸</span><h4>Knowledge Representation</h4></div>
                             <div class="kg_sub_menu">
-                                <h5>Concepts</h5>
-                                <h5>Ontologies</h5>
-                                <h5>Standards</h5>
+                                <h5 data-section="kr_concepts">Concepts</h5>
+                                <h5 data-section="kr_ontologies">Ontologies</h5>
+                                <h5 data-section="kr_standards">Standards</h5>
                             </div>
 
-                            <div class="kg_menu"><span>▸</span><h4>Researches & Challenges</h4></div>
+                            <div class="kg_menu" data-file="kg_research.html"><span>▸</span><h4>Researches & Challenges</h4></div>
                             <div class="kg_sub_menu">
-                                <h5>Concepts</h5>
-                                <h5>Ontologies</h5>
-                                <h5>Standards</h5>
+                                <h5 data-section="kgr_concepts">Concepts</h5>
+                                <h5 data-section="kgr_algorithms">Graph Algorithms</h5>
+                                <h5 data-section="kgr_refinement">Knowledge Graph Refinement</h5>
+                                <h5 data-section="kgr_challenges">Challenges & Issues</h5>
                             </div>
 
                         </div>
