--- a/knowledgebase/kg/database.html
+++ b/knowledgebase/kg/database.html
@@ -3,37 +3,56 @@
 </div>
 
 <div class="kb_database">
-    <h3>Knowledge Base</h3>
-    <table style="width:100%">
-        <tr>
-          <th>Name</th>
-          <th>Creator</th>
-          <th>Description</th>
-        </tr>
-        <tr>
-          <td>DBpedia</td>
-          <td>DBpedia Association</td>
-          <td>Extracted from Wikipedia</td>
-        </tr>
-        <tr>
-          <td>WordNet</td>
-          <td>Princeton Univ.</td>
-          <td>Lexical database of English</td>
-        </tr>
-        <tr>
-            <td>YAGO</td>		
-            <td>Max Planck Institute</td>
-            <td>Combines Wikipedia & WordNet</td>
-        </tr>
-        <tr>
-            <td>ConceptNet</td>
-            <td>MIT Media Lab</td>
-            <td>Multilingual semantic network</td>
-        </tr>
-        <tr>
-            <td>Wikidata</td>
-            <td>Wikimedia Foundation</td>
-            <td>Free knowledge base</td>
-        </tr>
-    </table>
+  <h3>Knowledge Base</h3>
+  <table style="width:100%">
+      <tr>
+        <th>Name</th>
+        <th>Creator</th>
+        <th>Description</th>
+      </tr>
+      <tr>
+        <td>DBpedia</td>
+        <td>DBpedia Association</td>
+        <td>Extracted from Wikipedia</td>
+      </tr>
+      <tr>
+        <td>WordNet</td>
+        <td>Princeton Univ.</td>
+        <td>Lexical database of English</td>
+      </tr>
+      <tr>
+          <td>YAGO</td>		
+          <td>Max Planck Institute</td>
+          <td>Combines Wikipedia & WordNet</td>
+      </tr>
+      <tr>
+          <td>ConceptNet</td>
+          <td>MIT Media Lab</td>
+          <td>Multilingual semantic network</td>
+      </tr>
+      <tr>
+          <td>Wikidata</td>
+          <td>Wikimedia Foundation</td>
+          <td>Free knowledge base</td>
+      </tr>
+  </table>
+</div>
+
+<div class="kb_querying">
+  <h3>Querying and Interacting with Knowledge</h3>
+  <ul>
+    <li>
+      SPARQL (SPARQL Protocol and RDF Query Language):
+      <br>A protocol and query language to retrieve and manipulate RDF data.
+    </li>
+    <li>
+      Triple & Quad
+      <br>Triple: Basic unit in RDF (Subject, Predicate, Object).
+      <br>Quad: Adds a graph context to triples (Graph, Subject, Predicate, Object).
+    </li>
+    <li>
+      Namespace
+      <br>Provides a way to avoid collisions between ontology terms and allows for combining different ontologies.
+    </li>
+  </ul>
 </div>
