--- a/cv/visual_cv.html
+++ b/cv/visual_cv.html
@@ -503,14 +503,14 @@
                     <header class="">
                         <h3 class="header-text" data-bind="label">
                             <span class="sc-14dqbwa-1 ckiabK">
-                                <span class="sc-14dqbwa-3 eCPwxA">Objectives</span>
+                                <span class="sc-14dqbwa-3 eCPwxA">Introduction</span>
                             </span>
                         </h3>
                     </header>
                     <div data-bind="add-article"></div>
                     <article data-bind="contents" class="">
                         <p style="line-height: 1.5em;">
-                            With a strong foundation in semantic web technologies, including SPARQL, OWL, and RDF, honed through a knowledge graph course and practical experience in my master's thesis on knowledge graph entity type prediction, I aim to deepen my expertise at ISWS. My background, further enriched by constructing databases with DBpedia and Wikidata, positions me to contribute significantly to ISWS while enhancing my research skills for my ongoing PhD in knowledge graphs and language models.
+                            Interdisciplinary research experience with a focus on natural language processing, information extraction, and knowledge graphs.
                         </p>
                     </article>
                 </section>
