--- a/cv/visual_cv.html
+++ b/cv/visual_cv.html
@@ -559,7 +559,7 @@
                                     </a>
                                     <div class="sc-12gbvxr-0 fELIRn mce-container empty">
                                         <div id="tiny-react_622126728201710503201040" class="mce-content-body mce-content-readonly" spellcheck="true" contenteditable="false">
-                                            <p>- Contributed to the Hybrint project by implementing a knowledge graph for agricultural scientific articles.</p>
+                                            <p>- Extracting structured knowledge from scientific articles (topic modelling, ontology supplementation, etc.) under the Hybrint project.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -745,6 +745,8 @@
                                     </span>
                                 </h3>
                             </header>
+
+                            <!--
                             <div data-bind="add-article"></div>
                                 <article data-bind="contents" class="">
                                     <div class="article-headings">
@@ -779,6 +781,8 @@
                                     </div>
                                 </div>
                             </article>
+                            -->
+                            
                             <article data-bind="contents" class="">
                                     <div class="article-headings">
                                         <h4 data-bind="title" class="">
