--- a/cv/visual_cv.html
+++ b/cv/visual_cv.html
@@ -474,7 +474,7 @@
                             </li>
                             <li class="email" data-bind="email">
                                 <img class="icon" src="../pic/email.png" alt="github link" style="width:0.8em; margin-right:0.5em; filter: grayscale(100%) brightness(1.2) contrast(0.2);">
-                                <a href="mailto:zhiyin.tan@l3s.de">zhiyin.tan@l3s.de</a>
+                                <a href="mailto:zhiyin121@gmail.com">zhiyin121@gmail.com</a>
                             </li>
                         </ul>
                         <ul class="user-websites" data-bind="websites">
@@ -499,6 +499,7 @@
                     </article>
                 </section>
 
+                <!--
                 <section data-bind="sections" id="dated_stories" class="dated_story">
                     <header class="">
                         <h3 class="header-text" data-bind="label">
@@ -514,7 +515,8 @@
                         </p>
                     </article>
                 </section>
-
+                -->
+                
                 <div class="columns" style="margin-top: 3.5em;">
                     <div class="main">
                         <section id="positions" class="dated_story">
